crates/serde-kdl/tests/snapshots/insta__human bytes.snap
---
source: crates/serde-kdl/tests/insta.rs
expression: "to_string(Bytes::new(b\"KDL\"))?"

---
- "S0RM"
