crates/serde-kdl/tests/snapshots/insta__human newtype variant.snap
---
source: crates/serde-kdl/tests/insta.rs
expression: "to_string(&Enum::Newtype(0))?"

---
(Newtype)- 0
