crates/serde-kdl/tests/snapshots/insta__human object map.snap
---
source: crates/serde-kdl/tests/insta.rs
expression: "to_string::<ObjectMap>(&[(Struct{field: 1,}, Tuple(2, 3)),\n                         (Struct{field: 4,},\n                          Tuple(5, 6))].into_iter().collect())?"

---

- {
    key {
        field 1
    }
    value {
        - 2
        - 3
    }
}
- {
    key {
        field 4
    }
    value {
        - 5
        - 6
    }
}

