crates/serde-kdl/tests/snapshots/insta__human struct variant.snap
---
source: crates/serde-kdl/tests/insta.rs
expression: "to_string(&Enum::Struct{field: 0,})?"

---
(Struct)- {
    field 0
}
