crates/serde-kdl/tests/snapshots/insta__human struct.snap
---
source: crates/serde-kdl/tests/insta.rs
expression: "to_string(&Struct{field: 0,})?"

---

field 0

