crates/serde-kdl/tests/snapshots/insta__human tuple variant.snap
---
source: crates/serde-kdl/tests/insta.rs
expression: "to_string(&Enum::Tuple(0, 0))?"

---
(Tuple)- {
    - 0
    - 0
}
