crates/serde-kdl/tests/snapshots/insta__human unit variant.snap
---
source: crates/serde-kdl/tests/insta.rs
expression: "to_string(&Enum::Unit)?"

---
(Unit)- null
